# raytracer

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  STRUCTURE.md
RayTracer.xcodeproj/: project.pbxproj
RayTracer.xcworkspace/: contents.xcworkspacedata
resource/: competition.mtl  cube.mtl  strawberry.mtl  teapot.mtl  teapot2.mtl
resource/textures/: angel256.ppm  buffy256.ppm  willow256.ppm  xander256.ppm
src/: KDNode.cpp  KDNode.h  Triangle.h  Vec3D.h  Vertex.h  aabb.cpp  aabb.h  color.h  compiler_opt.h  config.h  group.cpp  group.h  imageWriter.h  image_writer.cpp  image_writer.h  kdnode.cpp  kdnode.h  light.cpp  light.h  lodepng.cpp  main.cpp  material.h  matrix.h  matrix4.h  mesh.cpp  mesh.h  platform.h  ray.h  raytracing.cpp  raytracing.h  scene.cpp  scene.h  scene_node.cpp  scene_node.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  testray.cpp  testray.h  (+9 more)
